# webp-pre-commit

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  README.md  convert_to_webp.py  environment.yml  mkdocs.yaml  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: auto-release.yml  ci.yml  code-style.yaml  docs.yaml  pr-tests.yaml  release-pypi-package.yaml  release.yml
docs/: api.md  index.md
tests/: test___init__.py  test_cli.py  test_models.py
webp_hook/: cli.py
